@startuml
!include _theme.iuml
skinparam legendBackgroundColor #161616
skinparam legendBorderColor #BFBFBF
title Entity Relationship Diagram — Indus11
hide circle
entity ACCOUNT {
  * account_id : string <<PK>>
  --
  owner_name : string
  country_code : string
  avg_monthly_transaction : float
  is_blacklisted : boolean
  risk_tier : string
}
entity TRANSACTION {
  * tx_id : string <<PK>>
  --
  * sender_account_id : string <<FK>>
  * receiver_account_id : string <<FK>>
  amount : float
  currency : string
  merchant_category : string
  merchant_id : string
  device_id : string <<FK>>
  ip_address : string <<FK>>
  composite_score : int
  decision : string
  explanation : text
  note : text
  rag_pending : boolean
  created_at : datetime
}
entity DEVICE {
  * device_id : string <<PK>>
}
entity IP_ADDRESS {
  * address : string <<PK>>
}
ACCOUNT ||--o{ TRANSACTION : sends
ACCOUNT ||--o{ TRANSACTION : receives
ACCOUNT }o--o{ DEVICE : USED_DEVICE
ACCOUNT }o--o{ IP_ADDRESS : USED_IP
ACCOUNT }o--o{ ACCOUNT : CONNECTED_TO
legend bottom
  ACCOUNT and TRANSACTION are MongoDB collections; their keys are enforced
  by the application, not by the database. DEVICE, IP_ADDRESS and the
  association edges are Neo4j nodes and relationships used by the graph layer.
endlegend
@enduml
